# matrix-rust-sdk

.github/workflows/: audit.yml
crates/matrix-sdk/: Cargo.toml
crates/matrix-sdk-base/src/: client.rs
crates/matrix-sdk-redis/: Cargo.toml
crates/matrix-sdk-redis/src/: fake_redis.rs  lib.rs  real_redis.rs  redis_crypto_store.rs  redis_shim.rs
crates/matrix-sdk/src/client/: builder.rs
examples/command_bot/: Cargo.toml
examples/command_bot/src/: main.rs
