[package]
name = "matrix-sdk-redis"
version = "0.1.0"
edition = "2021"

[features]
default = ["e2e-encryption"]

e2e-encryption = [
    "matrix-sdk-crypto",
    "matrix-sdk-base/e2e-encryption",
]

# TODO: remove unused dependencies
[dependencies]
async-stream = "0.3.3"
async-trait = "0.1.53"
dashmap = "5.2.0"
futures-core = "0.3.21"
futures-util = { version = "0.3.21", default-features = false }
matrix-sdk-base = { path = "../matrix-sdk-base" }
matrix-sdk-common = { path = "../matrix-sdk-common" }
matrix-sdk-crypto = { path = "../matrix-sdk-crypto", optional = true }
matrix-sdk-store-encryption = { path = "../matrix-sdk-store-encryption" }
regex = "1.5.4"
redis = { version = "0.21", features = ["tokio-comp"] }
ruma = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", default-features = false, features = ["sync", "fs"] }
tracing = "0.1.34"

[dev-dependencies]
matrix-sdk-base = { path = "../matrix-sdk-base", features = ["testing"] }
matrix-sdk-crypto = { path = "../matrix-sdk-crypto", features = ["testing"] }
matrix-sdk-test = { version = "0.4.0", path = "../matrix-sdk-test" }
once_cell = "1.10.0"
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread", "macros"] }
